[package]
name = "pocketpy-sys"
description = "Rust FFI bindings to pocketpy, a portable python 3.x interpreter"
author = "Potassium-Shot"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://github.com/potassium-shot/pocketpy-sys"
keywords = ["ffi", "python", "portable", "bindings"]
categories = ["external-ffi-bindings", "compilers", "parser-implementations"]

[build-dependencies]
bindgen = "0.70"
cmake = "0.1"
